Fix: mobile jump menu dropdown displayed on desktop view

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -276,11 +276,11 @@
     }
   }
 
-  .appear > main > div.mobile-jump-menu {
+  .appear div.mobile-jump-menu {
     @apply block w-full px-4 py-2 bg-white md:hidden order-last;
   }
 
-  .appear > main > div > select.selected-tab {
+  .appear  div.mobile-jump-menu select.selected-tab {
     @apply block w-auto py-2 pl-4 text-base border border-gray-300 rounded text-danaherblue-600 focus:outline-none;
   }
   
